# image_registration

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README  README.md  README.rst  REQUIREMENTS  conftest.py  environment.yml  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml  publish.yml
apidoc/: conf.py  image_registration.fft_tools.rst  index.rst  modules.rst
doc/: Fourier Scaling = Zooming = Similarity.ipynb  SpectralXCorr.ipynb  conf.py  fourier_tools.rst  image_registration.fft_tools.rst  image_registration.rst  image_registration.tests.rst  index.rst  modules.rst
docs/: Image Registration Debugging.ipynb  Makefile  REQUIREMENTS  SpectralXCorr.ipynb  conf.py  image_registration.FITS_tools.rst  image_registration.fft_tools.rst  image_registration.rst  image_registration.tests.rst  index.rst  spectral_xcorr.rst
examples/: Cross Correlation.ipynb  benchmarks_shift.py  benchmarks_zoom.py  demo_gaussian.py
fft_tools/: convolve_nd.py  correlate2d.py
image_registration/: __init__.py  chi2_shifts.py  chi2_shifts_1d.py  conftest.py  cross_correlation_shifts.py  iterative_zoom.py  register_images.py  version.py
image_registration/FITS_tools/: __init__.py  fits_overlap.py  hcongrid.py  load_header.py  match_images.py
image_registration/fft_tools/: __init__.py  convolve_nd.py  correlate1d.py  correlate2d.py  downsample.py  fast_ffts.py  scale.py  shift.py  smooth_tools.py  upsample.py  zoom.py
image_registration/fft_tools/tests/: measure_accuracy.py  test_downsample.py  test_shift.py  test_upsample.py  test_upsample_1d.py  test_zoomnd.py
image_registration/tests/: __init__.py  debug_test.py  measure_expected_offsets.py  registration_testing.py  tests.py
tests/: registration_testing.py
