[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = image_registration
description = Package for registering images with extended emission
long_description = See readme
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://image_registration.rtfd.org
edit_on_github = True
github_project = keflavich/image_registration

[entry_points]
