[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
name = image_registration
package_name = image_registration
description = Package for registering images with extended emission
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = https://image-registration.readthedocs.io/en/latest/
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = keflavich/image-registration
version = 0.2.6.dev

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
    matplotlib
docs =
    sphinx-astropy

[options.package_data]
image_registration = data/*

[tool:pytest]
testpaths = "image_registration" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    image_registration/_astropy_init*
    image_registration/conftest.py
    image_registration/*setup_package*
    image_registration/tests/*
    image_registration/*/tests/*
    image_registration/extern/*
    image_registration/version*
    */image_registration/_astropy_init*
    */image_registration/conftest.py
    */image_registration/*setup_package*
    */image_registration/tests/*
    */image_registration/*/tests/*
    */image_registration/extern/*
    */image_registration/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
